new section added

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
           <p class="banner-heading">
             PLAY LIKE THE <span class="fancy-color">G.O.A.T</span>
           </p>
-          <p>1-Click instant play</p>
-          <p>No Download</p>
-          <p>1000s of supported online games</p>
+          <p><img src="images/frame4.png" alt="">1-Click instant play</p>
+          <p> <img src="images/frame1.png" alt="">No Download</p>
+          <p> <img src="images/frame2.png" alt="">1000s of supported online games</p>
           <button>SIGN IN</button>
-          <button>Go Rogue</button>
+          <button>GO ROGUE</button>
         </div>
 
         <div class="banner-right">
@@ -70,7 +70,7 @@
             over 400 million players each month and our audience keeps growing.
           </p>
 
-          <button>know more</button>
+          <button>KNOW MORE</button>
           <p>Our purpose...</p>
           <p>“unleash the gamer in everyone”</p>
         </div>
@@ -87,7 +87,13 @@
         <div class="video-cards">
           <div class="video-card">
             <div class="video-img">
-              <img src="images/rectangle4.png" alt="" />
+              <img class="card-img" src="images/rectangle4.png" alt="" />
+              <div class="image-overley">
+                <div class="button-image">
+                  <img src="/images/playbutton1.png" alt="" />
+                </div>
+                <p>watch more</p>
+              </div>
             </div>
             <div class="video-text">
               <p>No Download. No Installs. Play games Instantly on Gamer.</p>
@@ -95,26 +101,44 @@
           </div>
           <div class="video-card">
             <div class="video-img">
-              <img src="images/rectangle5.png" alt="" />
+              <img class="card-img" src="images/rectangle5.png" alt="" />
+              <div class="image-overley">
+                <div class="button-image">
+                  <img src="/images/playbutton1.png" alt="" />
+                </div>
+                <p>watch more</p>
+              </div>
             </div>
             <div class="video-text">
-              <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+              <p>Did you score? #unblockedgames #school</p>
             </div>
           </div>
           <div class="video-card">
             <div class="video-img">
-              <img src="images/rectangle6.png" alt="" />
+              <img class="card-img" src="images/rectangle6.png" alt="" />
+              <div class="image-overley">
+                <div class="button-image">
+                  <img src="/images/playbutton1.png" alt="" />
+                </div>
+                <p>watch more</p>
+              </div>
             </div>
             <div class="video-text">
-              <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+              <p>Breaking game records like OG</p>
             </div>
           </div>
           <div class="video-card">
             <div class="video-img">
-              <img src="images/rectangle7.png" alt="" />
+              <img class="card-img" src="images/rectangle7.png" alt="" />
+              <div class="image-overley">
+                <div class="button-image">
+                  <img src="/images/playbutton1.png" alt="" />
+                </div>
+                <p>watch more</p>
+              </div>
             </div>
             <div class="video-text">
-              <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+              <p>Busted gaming on school laptop, but you are still lit.</p>
             </div>
           </div>
         </div>
@@ -151,30 +175,84 @@
           </div>
           <div class="allgame-card">
             <img src="images/rectangle12.png" alt="" />
-            <p>Action Games</p>
+            <p>Adventure Games</p>
           </div>
 
           <div class="allgame-card">
             <img src="images/rectangle13.png" alt="" />
-            <p>Action Games</p>
+            <p>Arcade Games</p>
           </div>
 
           <div class="allgame-card">
             <img src="images/rectangle14.png" alt="" />
-            <p>Action Games</p>
+            <p>Educational Games</p>
           </div>
 
           <div class="allgame-card">
             <img src="images/rectangle15.png" alt="" />
-            <p>Action Games</p>
+            <p>Word Games</p>
           </div>
 
           <div class="allgame-card">
             <img src="images/rectangle16.png" alt="" />
-            <p>Action Games</p>
+            <p>Role Palying Games</p>
           </div>
         </div>
       </div>
     </section>
+
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-logo logo">
+          <img src="images/frame.png" alt="footer logo" />
+          <p class="logo-big">Gamer</p>
+        </div>
+
+        <div class="footer-nav">
+          <ul>
+            <li>Our Stroy</li>
+            <li>Games</li>
+            <li>Web Games</li>
+            <li>Careers</li>
+            <li>Support</li>
+            <li>My Account</li>
+          </ul>
+        </div>
+
+        <div class="footer-icon">
+          <ul>
+            <li>
+              <a href=""><img src="images/youtube.png" alt="" /></a>
+            </li>
+
+            <li>
+              <a href=""><img src="images/facebook1.png" alt="" /></a>
+            </li>
+
+            <li>
+              <a href=""><img src="images/apple1.png" alt="" /></a>
+            </li>
+
+            <li>
+              <a href=""><img src="images/instagram1.png" alt="" /></a>
+            </li>
+
+            <li>
+              <a href=""><img src="images/linkedin1.png" alt="" /></a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="footer-policy">
+          <p>Terms and Condtions</p>
+          <p>Privacy Policy</p>
+          <p>Cookie Policy</p>
+          <p>Privacy Settings</p>
+        </div>
+        <div class="footer-copyright">
+          <p>Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
