few changes added

--- a/index.html
+++ b/index.html
@@ -42,9 +42,12 @@
           <p class="banner-heading">
             PLAY LIKE THE <span class="fancy-color">G.O.A.T</span>
           </p>
-          <p><img src="images/frame4.png" alt="">1-Click instant play</p>
-          <p> <img src="images/frame1.png" alt="">No Download</p>
-          <p> <img src="images/frame2.png" alt="">1000s of supported online games</p>
+          <p><img src="images/frame4.png" alt="" />1-Click instant play</p>
+          <p><img src="images/frame1.png" alt="" />No Download</p>
+          <p>
+            <img src="images/frame2.png" alt="" />1000s of supported online
+            games
+          </p>
           <button>SIGN IN</button>
           <button>GO ROGUE</button>
         </div>
@@ -72,7 +75,7 @@
 
           <button>KNOW MORE</button>
           <p>Our purpose...</p>
-          <p>“unleash the gamer in everyone”</p>
+          <p class="we_big_text">“unleash the gamer in everyone”</p>
         </div>
       </div>
     </section>
